# movielens-recsys

./: .dockerignore  .env.sample  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  cloudbuild.yaml  docker-compose.yaml  pyproject.toml
infra/deploy/k8s/: configmap.yaml  deployment.yaml  migrate-job.yaml  namespace.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
infra/deploy/terraform/: apis.tf  artifact_registry.tf  cloudsql.tf  gcs.tf  gke.tf  iam.tf  k8s.tf  locals.tf  outputs.tf  providers.tf  secrets.tf  service_account.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/pgadmin/: init_pgadmin.sh  pgpass  servers.json
notebooks/: 01_etl.ipynb  02_eda.ipynb  03_pytorch.ipynb  03_train.ipynb  metrics.py
recsys/: aggregates.py  config.py  context.py  gcp.py  recommender.py  utils.py
recsys/alembic/: env.py
recsys/alembic/versions/: 987c10513f96_seed_movielens_ml_1m_data.py  de48eeb5924c_create_users_movies_ratings.py
recsys/api/: app.py  config.py  dependencies.py
recsys/db/: models.py  session.py
recsys/db/repositories/: movies.py  ratings.py
recsys/modeling/: als.py  dataset.py  item_knn.py  predict.py  protocols.py  torch.py  train.py
recsys/modeling/training/: als.py  cli.py  dataset.py  item_knn.py  utils.py
