[project]
name = "movielens-recsys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "implicit>=0.7.2",
    "ipython>=9.8.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "optuna>=4.6.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "click>=8.3.1",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
    "loadenv>=0.1.1",
    "pydantic-settings>=2.12.0",
    "gcsfs>=2026.1.0",
    "google-cloud-storage>=3.8.0",
    "dotenv>=0.9.9",
    "jupyterlab>=4.5.1",
    "ipykernel>=7.1.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "ruff>=0.14.11",
]
