[project]
name = "movielens-recsys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # только самое базовое ядро, без ноутбуков/тренировок
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "click>=8.3.1",
  "numpy>=2.4.0",
  "pandas>=2.2.0",
  "implicit>=0.7.2",
  "scipy>=1.11.0",
]

[dependency-groups]
api = [
  "sqlalchemy>=2.0.45",
  "alembic>=1.18.1",
  "psycopg[binary]>=3.3.2",
  # asyncpg НЕ обязателен, если ты используешь psycopg async (psycopg3)
  # "asyncpg>=0.31.0",
  "google-cloud-storage>=3.8.0",
]

train = [
  # training / experiments
  "optuna>=4.6.0",
  "scikit-learn>=1.8.0",
  "torch>=2.9.1",
  # если используешь gcsfs именно в обучении/etl
  "gcsfs>=2026.1.0",
]

notebooks = [
  "jupyterlab>=4.5.1",
  "ipykernel>=7.1.0",
  "ipython>=9.8.0",
  "matplotlib>=3.10.8",
  "seaborn>=0.13.2",
]

dev = [
  "black>=25.12.0",
  "mypy>=1.19.1",
  "pgcli>=4.3.0",
  "ruff>=0.14.11",
]

migrations = [
  "alembic>=1.18.1",
]
